# ocrypt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dune-project  index.html  ocrypt.opam
.github/: dependabot.yml
.github/workflows/: build.yml  doc.yml  lint.yml  test.yml
lib/: dune  io.ml  io.mli
ocrypt/: index.html
ocrypt/Ocrypt/: index.html
ocrypt/Ocrypt/Io/: index.html
test/: dune  test_io.ml
