(lang dune 3.9)

(name ocrypt)

(generate_opam_files true)

(source
 (github smercer10/ocrypt))

(authors "Sam Mercer")

(maintainers "Sam Mercer")

(license LICENSE)

(documentation https://smercer10.github.io/ocrypt)

(package
 (name ocrypt)
 (synopsis "TBC")
 (description "TBC")
 (depends ocaml dune)
 (tags ("TBC")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
